--- a/RcsApplication/bin/.gitignore
+++ b/RcsApplication/bin/.gitignore
@@ -1,4 +1,7 @@
-/calendarPicker
-/controll
-/view
-/graphicDesign
+/application/
+/calendarPicker/
+/conectionDb/
+/controll/
+/graphicDesign/
+/view/
+/windowInformationFromUser/
